# DiG

./: .gitignore  DiG.cabal  README.md
src/: Main.hs
src/DiG/: Config.hs  GitCmd.hs
