Name:                DiG 
Version:             0.1
Synopsis:            Continuous integration results in a increased number of builds for software projects;
                     this builds usually generate a variaty of artefacts including documentations.
                     Managing and maintaining access to different version of documentation is challenging and generates a lot of cognitive noise.
                     This is an attempt to eliminate that overhead by using git as storage mechanism and a minimal Snap server to allow access to it.  
Description:         Documents in Git
License:             MIT 
Author:              Oscar Forero
Maintainer:          omforero@googlemail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable dig
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base                      >= 4     && < 5,
    ConfigFile                >= 1.1,
    bytestring                >= 0.9.1 && < 0.11,
    snap-core                 >= 0.9   && < 0.11,
    snap-server               >= 0.9   && < 0.11,
    process                   >= 1.1,
    mtl                       >= 2.1,
    transformers              >= 0.3 
    --MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    --mtl                       >= 2     && < 3,
    --hit                       >= 0.5,
    --system-filepath           >= 0.4.7

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
